ALignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Space+Grotesk:wght@300..700&display=swap");
 
 body {
   margin: 0;
   padding: 0;
-  font-family: "Ubuntu Mono", monospace;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 600;
+  font-optical-sizing: auto;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
